Cr50/2.5MeV/src/2.5MeV.err
Currently Loaded Modulefiles:
  1) chpc/BIOMODULES
  2) /apps/chpc/scripts/modules/bio/lib/isl/0.16.1
  3) cmake/3.16.3
  4) gcc/9.2.0
  5) chpc/phys/geant4/10.5.1
  6) chpc/phys/root/6-20-04
/mnt/lustre/users/shart/Geant4.10.05/TargetPG/Cr50/2.5MeV/src/SteppingAction.cc: In member function ‘virtual void SteppingAction::UserSteppingAction(const G4Step*)’:
/mnt/lustre/users/shart/Geant4.10.05/TargetPG/Cr50/2.5MeV/src/SteppingAction.cc:103:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<double>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
  103 |       for(int i = 0; i<gammaEkin.size(); i++)
      |                      ~^~~~~~~~~~~~~~~~~
/mnt/lustre/users/shart/Geant4.10.05/TargetPG/Cr50/2.5MeV/src/SteppingAction.cc:104:86: error: no matching function for call to ‘AnalysisManager::FillSecondaries(__gnu_cxx::__alloc_traits<std::allocator<double>, double>::value_type&, G4int&, G4int&, G4double&, G4double&)’
  104 |         analysis -> FillSecondaries(gammaEkin[i], FinalA, FinalZ, protonStep, protonE);
      |                                                                                      ^
In file included from /mnt/lustre/users/shart/Geant4.10.05/TargetPG/Cr50/2.5MeV/include/SteppingAction.hh:34,
                 from /mnt/lustre/users/shart/Geant4.10.05/TargetPG/Cr50/2.5MeV/src/SteppingAction.cc:40:
/mnt/lustre/users/shart/Geant4.10.05/TargetPG/Cr50/2.5MeV/include/AnalysisManager.hh:54:8: note: candidate: ‘void AnalysisManager::FillSecondaries(G4int, G4double, G4double)’
   54 |   void FillSecondaries(G4int FinalA, G4double FinalZ, G4double Step);
      |        ^~~~~~~~~~~~~~~
/mnt/lustre/users/shart/Geant4.10.05/TargetPG/Cr50/2.5MeV/include/AnalysisManager.hh:54:8: note:   candidate expects 3 arguments, 5 provided
make[2]: *** [CMakeFiles/radioprotection.dir/src/SteppingAction.cc.o] Error 1
make[1]: *** [CMakeFiles/radioprotection.dir/all] Error 2
make: *** [all] Error 2
/var/spool/PBS/mom_priv/jobs/3046563.sched01.SC: line 36: ./radioprotection: No such file or directory
